wip: feat: select textuer

--- a/src/index.html
+++ b/src/index.html
@@ -13,4 +13,11 @@
       }
     </style>
   </head>
+  <body>
+    <p id="output"></p>
+    <ul>
+      <li id="water"><a>water</a></li>
+      <li id="wood"><a>wood</a></li>
+    </ul>
+  </body>
 </html>
